--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html">Pyme TI</a>
+              <a class="navbar-brand" href="index.html">PymeTI</a>
           </div>
           <!-- /.navbar-header -->
 
@@ -258,88 +258,31 @@
                           <!-- /input-group -->
                       </li>
                       <li>
-                          <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                          <a href="index.html"><i class="fa fa-product-hunt fa-fw"></i> Productos</a>
                       </li>
                       <li>
-                          <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
+                          <a href="#"><i class="fa fa-money fa-fw"></i> Precios</a>
+                      </li>
+                      <li>
+                          <a href="tables.html"><i class="fa fa-phone fa-fw"></i> Contactanos</a>
+                      </li>
+                      <li>
+                          <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Quiero ser distribuidor</a>
+                      </li>
+                      <li>
+                          <a href="#"><i class="fa fa-wrench fa-fw"></i> Representantes</a>
+                      </li>
+                      <li>
+                          <a href="#"><i class="fa fa-info fa-fw"></i> Conócenos</a>
+                      </li>
+                      <li>
+                          <a href="#"><i class="fa fa-support fa-fw"></i>Servicio y Soporte<span class="fa arrow"></span></a>
                           <ul class="nav nav-second-level">
                               <li>
-                                  <a href="flot.html">Flot Charts</a>
+                                  <a href="blank.html">Herramientas</a>
                               </li>
                               <li>
-                                  <a href="morris.html">Morris.js Charts</a>
-                              </li>
-                          </ul>
-                          <!-- /.nav-second-level -->
-                      </li>
-                      <li>
-                          <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
-                      </li>
-                      <li>
-                          <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
-                      </li>
-                      <li>
-                          <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
-                          <ul class="nav nav-second-level">
-                              <li>
-                                  <a href="panels-wells.html">Panels and Wells</a>
-                              </li>
-                              <li>
-                                  <a href="buttons.html">Buttons</a>
-                              </li>
-                              <li>
-                                  <a href="notifications.html">Notifications</a>
-                              </li>
-                              <li>
-                                  <a href="typography.html">Typography</a>
-                              </li>
-                              <li>
-                                  <a href="icons.html"> Icons</a>
-                              </li>
-                              <li>
-                                  <a href="grid.html">Grid</a>
-                              </li>
-                          </ul>
-                          <!-- /.nav-second-level -->
-                      </li>
-                      <li>
-                          <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
-                          <ul class="nav nav-second-level">
-                              <li>
-                                  <a href="#">Second Level Item</a>
-                              </li>
-                              <li>
-                                  <a href="#">Second Level Item</a>
-                              </li>
-                              <li>
-                                  <a href="#">Third Level <span class="fa arrow"></span></a>
-                                  <ul class="nav nav-third-level">
-                                      <li>
-                                          <a href="#">Third Level Item</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Third Level Item</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Third Level Item</a>
-                                      </li>
-                                      <li>
-                                          <a href="#">Third Level Item</a>
-                                      </li>
-                                  </ul>
-                                  <!-- /.nav-third-level -->
-                              </li>
-                          </ul>
-                          <!-- /.nav-second-level -->
-                      </li>
-                      <li>
-                          <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
-                          <ul class="nav nav-second-level">
-                              <li>
-                                  <a href="blank.html">Blank Page</a>
-                              </li>
-                              <li>
-                                  <a href="login.html">Login Page</a>
+                                  <a href="login.html">Manuales de Apoyo</a>
                               </li>
                           </ul>
                           <!-- /.nav-second-level -->
