--- a/Curso/index.html
+++ b/Curso/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <h1>Hello, world2!</h1>
+    <div class="col-lg-11"> </div>
     <a href="#" class="btn btn-primary">boton</a>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
