--- a/Curso/index.html
+++ b/Curso/index.html
@@ -8,6 +8,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+<div class="container"></div>
+    <div class="row">
+    <div class="col-md-2"></div>
+    
+</div>
 
     <title>Hello, world!</title>
 </head>
