--- a/Curso/index.html
+++ b/Curso/index.html
@@ -12,7 +12,7 @@
 
   <!-- ARCHIVOS CSS PERSONALIZADOS -->
   <link type="text/css" rel="stylesheet" href="css/estilos.css">
-  <title>Blog personal de Tomas Mendez</title>
+  <title>Blog personal de Guimel González</title>
 </head>
 <body>
 
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
     <div class="container">      
       <a href="#" class="navbar-brand">
-        <strong>Tomas</strong> Mendez
+        <strong>Guimel</strong> González
       </a>
 
       <button type="button" class="navbar-toggler" data-toggle="collapse"
@@ -31,9 +31,9 @@
 
     <div class="collapse navbar-collapse" id="menu-principal">
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a href="#" class="nav-link">Proyectos</a></li>
         <li class="nav-item"><a href="#" class="nav-link active">Inicio</a></li>
         <li class="nav-item"><a href="#" class="nav-link">¿Quien soy?</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Proyectos</a></li>
       </ul>
     </div>
   </div>
